# hermes-session-titler

./: README.md  __init__.py  pyproject.toml
hermes_session_titler/: __init__.py
plugins/session-titler/: __init__.py  plugin.yaml
