[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-session-titler"
version = "1.0.0"
description = "Auto-generate or retitle Hermes session titles from conversation history"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."hermes_agent.plugins"]
session-titler = "hermes_session_titler:register"

[tool.setuptools.packages.find]
include = ["hermes_session_titler*"]
